syntax = "proto3";

package go_gateway_pb;

option go_package="./pb;go_gateway_pb";

// Go Gateway service definition
service GoGateway {
    rpc GetAccountByAccountNumber(GetAccountByAccountNumberRequest) returns (GetAccountByAccountNumberResponse);
}

// GetAccountByAccountNumber messages
message GetAccountByAccountNumberRequest {
    string account_number = 1;
}

message GetAccountByAccountNumberResponse {
    AccountInfo account = 1;
    CustomerInfo customer = 2;
}

message AccountInfo {
    int64 account_id = 1;
    string account_number = 2;
    int64 customer_id = 3;
    string account_type = 4;
    string account_status = 5;
    string balance = 6;
    string currency = 7;
    string opened_date = 8;
    string closed_date = 9;
    string created_at = 10;
    string updated_at = 11;
}

message CustomerInfo {
    string customer_number = 1;
    string full_name = 2;
    string id_number = 3;
    string phone_number = 4;
    string email = 5;
    string address = 6;
    string date_of_birth = 7;
}

